syntax="proto3";

option go_package="/pb";
option java_package="com.services";


message  PubKeyExchange{
    string sender = 1;
    string reciever = 2;
    string encryptedKey = 3;

}

